--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </figure>
                   </div>
                   <div class="media-content no-scrollbars">
-                    <p class="title is-4">Roderick Bernardo</p>
+                    <p class="title is-4">Raymond Bernardo</p>
                     <p class="subtitle is-6">
                       GitHub:
                       <a
