--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <div class="media-left">
                     <figure class="image is-48x48">
                       <img
-                        src="./images/placeholder.png"
+                        src="images/placeholder.png"
                         alt="Placeholder image"
                       />
                     </figure>
