--- a/index.html
+++ b/index.html
@@ -57,7 +57,37 @@
             </div>
           </div>
           <!-- Bernardo, Rosemarie place your code below -->
-
+          <div class="column">
+            <div class="card">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <figure class="image is-48x48">
+                      <img
+                        src="https://raw.githubusercontent.com/roderickkit-bernardo/COMP9783-55868-Code-Collab/
+            main/images/placeHolder.png"
+                        alt="Placeholder image"
+                      />
+                    </figure>
+                  </div>
+                  <div class="media-content no-scrollbars">
+                    <p class="title is-4">Rosermarie Bernardo</p>
+                    <p class="subtitle is-6">
+                      GitHub:
+                      <a
+                        href="https://github.com/git-hub-Richmond-K-Bernardo"
+                        target="_blank"
+                        >Richmond-K-Bernardo</a
+                      >
+                    </p>
+                  </div>
+                </div>
+                <div class="content">
+                  “Be yourself; everyone else is already taken.” ― Oscar Wilde
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- Casha, Albert place your code below -->
         </div>
 
