Committed My Changes
Updated Index and readme

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
           </div>
           <!-- Bernardo, Rosemarie place your code below -->
-		  
+
           <!-- Casha, Albert place your code below -->
         </div>
 
@@ -73,7 +73,34 @@
           <!-- Norton-Mcintosh, Christie place your code below -->
 
           <!-- Shamimi, Ahmadreza place your code below -->
-
+          <div class="column">
+            <div class="card">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <figure class="image is-48x48">
+                      <img
+                        src="https://avatars.githubusercontent.com/u/19757691?v=4"
+                        alt="Placeholder image"
+                      />
+                    </figure>
+                  </div>
+                  <div class="media-content no-scrollbars">
+                    <p class="title is-4">Ahmadreza Shamimi</p>
+                    <p class="subtitle is-6">
+                      GitHub:
+                      <a href="https://github.com/Shentia" target="_blank"
+                        >@Shentia</a
+                      >
+                    </p>
+                  </div>
+                </div>
+                <div class="content">
+                  ”Stay Hungry, Stay Foolish”: Steve Jobs
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- Tam, King Sang place your code below -->
         </div>
       </div>
