Create New Branch
Added GitHub profile and quote

--- a/index.html
+++ b/index.html
@@ -99,7 +99,37 @@
 
         <div class="columns">
           <!-- Norton-Mcintosh, Christie place your code below -->
-
+          <div class="column">
+            <div class="card">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <figure class="image is-48x48">
+                      <img
+                        src="https://raw.githubusercontent.com/roderickkit-bernardo/COMP9783-55868-Code-Collab/
+            main/images/placeHolder.png"
+                        alt="Placeholder image"
+                      />
+                    </figure>
+                  </div>
+                  <div class="media-content no-scrollbars">
+                    <p class="title is-4">Christie Norton-McIntosh</p>
+                    <p class="subtitle is-6">
+                      GitHub:
+                      <a
+                        href="https://github.com/christie-norton-mcintosh"
+                        target="_blank"
+                        >christie-norton-mcintosh</a
+                      >
+                    </p>
+                  </div>
+                </div>
+                <div class="content">
+                  “It always seems impossible until it is done.” - Nelson Mandela
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- Shamimi, Ahmadreza place your code below -->
           <div class="column">
             <div class="card">
