--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
                   <div class="media-left">
                     <figure class="image is-48x48">
                       <img
-                        src="https://raw.githubusercontent.com/roderickkit-bernardo/COMP9783-55868-Code-Collab/
-            main/images/placeHolder.png"
+                        src="https://raw.githubusercontent.com/roderickkit-bernardo/COMP9783-55868-Code-Collab/main/images/placeHolder.png"
                         alt="Placeholder image"
                       />
                     </figure>
