--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                   <div class="media-left">
                     <figure class="image is-48x48">
                       <img
-                        src="https://raw.githubusercontent.com/roderickkit-bernardo/COMP9783-55868-Code-Collab/main/images/placeHolder.png"
-                        alt="Placeholder image"
+                        class="is-rounded"
+                        src="https://github.com/roderickkit-bernardo.png"
                       />
                     </figure>
                   </div>
@@ -44,14 +44,14 @@
                       <a
                         href="https://github.com/roderickkit-bernardo"
                         target="_blank"
-                        >roderickkit-bernardo</a
+                        >@roderickkit-bernardo</a
                       >
                     </p>
                   </div>
                 </div>
                 <div class="content">
-                  I hear and I forget, I see and I remember, I do and I
-                  understand. - Confucius
+                  "I hear and I forget, I see and I remember, I do and I
+                  understand." - <i>Confucius</i>
                 </div>
               </div>
             </div>
@@ -66,7 +66,8 @@
                   <div class="media-left">
                     <figure class="image is-48x48">
                       <img
-                        src="https://raw.githubusercontent.com/roderickkit-bernardo/COMP9783-55868-Code-Collab/main/images/placeHolder.png"
+                        class="is-rounded"
+                        src="https://github.com/albert-casha.png"
                         alt="Placeholder image"
                       />
                     </figure>
@@ -76,13 +77,13 @@
                     <p class="subtitle is-6">
                       GitHub:
                       <a href="https://github.com/albert-casha" target="_blank"
-                        >albert-casha</a
+                        >@albert-casha</a
                       >
                     </p>
                   </div>
                 </div>
                 <div class="content">
-                  Perfect is the enemy of Good - Voltaire
+                  "Perfect is the enemy of Good" - <i>Voltaire</i>
                 </div>
               </div>
             </div>
@@ -106,7 +107,8 @@
                   <div class="media-left">
                     <figure class="image is-48x48">
                       <img
-                        src="https://raw.githubusercontent.com/roderickkit-bernardo/COMP9783-55868-Code-Collab/main/images/placeHolder.png"
+                        class="is-rounded"
+                        src="https://github.com/christie-norton-mcintosh.png"
                         alt="Placeholder image"
                       />
                     </figure>
@@ -118,13 +120,14 @@
                       <a
                         href="https://github.com/christie-norton-mcintosh"
                         target="_blank"
-                        >christie-norton-mcintosh</a
+                        >@christie-norton-mcintosh</a
                       >
                     </p>
                   </div>
                 </div>
                 <div class="content">
-                  “It always seems impossible until it is done.” - Nelson Mandela
+                  "It always seems impossible until it is done." -
+                  <i>Nelson Mandela</i>
                 </div>
               </div>
             </div>
@@ -137,7 +140,8 @@
                   <div class="media-left">
                     <figure class="image is-48x48">
                       <img
-                        src="https://avatars.githubusercontent.com/u/19757691?v=4"
+                        class="is-rounded"
+                        src="https://github.com/Shentia.png"
                         alt="Placeholder image"
                       />
                     </figure>
@@ -153,7 +157,7 @@
                   </div>
                 </div>
                 <div class="content">
-                  ”Stay Hungry, Stay Foolish”: Steve Jobs
+                  ”Stay Hungry, Stay Foolish” - <i>Steve Jobs</i>
                 </div>
               </div>
             </div>
@@ -166,7 +170,8 @@
                   <div class="media-left">
                     <figure class="image is-48x48">
                       <img
-                        src="https://raw.githubusercontent.com/roderickkit-bernardo/COMP9783-55868-Code-Collab/main/images/placeHolder.png"
+                        class="is-rounded"
+                        src="https://github.com/SamuelTks.png"
                         alt="Placeholder image"
                       />
                     </figure>
@@ -176,13 +181,13 @@
                     <p class="subtitle is-6">
                       GitHub:
                       <a href="https://github.com/SamuelTks" target="_blank"
-                        >SamuelTks</a
+                        >@SamuelTks</a
                       >
                     </p>
                   </div>
                 </div>
                 <div class="content">
-                  "Survival of the fittest." - Charles Darwin
+                  "Survival of the fittest." - <i>Charles Darwin</i>
                 </div>
               </div>
             </div>
