--- a/index.html
+++ b/index.html
@@ -57,6 +57,35 @@
             </div>
           </div>
           <!-- Bernardo, Rosemarie place your code below -->
+          <div class="column">
+            <div class="card">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <figure class="image is-48x48">
+                      <img
+                        src="https://raw.githubusercontent.com/roderickkit-bernardo/COMP9783-55868-Code-Collab/
+            main/images/placeHolder.png"
+                        alt="Placeholder image"
+                      />
+                    </figure>
+                  </div>
+                  <div class="media-content no-scrollbars">
+                    <p class="title is-4">Rosemarie Bernardo</p>
+                    <p class="subtitle is-6">
+                      GitHub:
+                      <a
+                        href="https://github.com/rosemariekate99"
+                        target="_blank"
+                        >rosemariekate99</a
+                      >
+                    </p>
+                  </div>
+                </div>
+                <div class="content">Live, Laugh, Love. - _Unknown_</div>
+              </div>
+            </div>
+          </div>
 
           <!-- Casha, Albert place your code below -->
           <div class="column">
