--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                   <div class="media-left">
                     <figure class="image is-48x48">
                       <img
-                        src="https://raw.githubusercontent.com/roderickkit-bernardo/COMP9783-55868-Code-Collab/
-            main/images/placeHolder.png"
+                        class="is-rounded"
+                        src="https://github.com/rosemariekate99.png"
                         alt="Placeholder image"
                       />
                     </figure>
@@ -77,12 +77,15 @@
                       <a
                         href="https://github.com/rosemariekate99"
                         target="_blank"
-                        >rosemariekate99</a
+                        >@rosemariekate99</a
                       >
                     </p>
                   </div>
                 </div>
-                <div class="content">Live, Laugh, Love. - _Unknown_</div>
+                <div class="content">
+                  "Live, laugh, love." -
+                  <i>Unknown</i>
+                </div>
               </div>
             </div>
           </div>
